# stm32g431_vscode_cmake

./: .cproject  .mxproject  .project  CMakeCache.txt  CMakeLists.txt  README.md  STM32G474CEUX_FLASH.ld  STM32G474CEUX_RAM.ld  build.ninja  cmake_install.cmake  controller_PMSM.ioc
Core/Src/: main.c  stm32g4xx_hal_msp.c
Debug/: controller_PMSM.elf  controller_PMSM.list  controller_PMSM.map  makefile  objects.list
Debug/Core/Src/: main.cyclo  main.su
Debug/Core/Startup/: startup_stm32g474ceux.d  subdir.mk
Debug/Drivers/STM32G4xx_HAL_Driver/Src/: subdir.mk
cmake/: gcc-arm-none-eabi.cmake
